--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,19 +3,24 @@ trigger:
 
 # ─────────────────────────── Variables ───────────────────────────
 variables:
+  # Container image
   imageName:  azdevops-cicd-sample
   imageTag:   $(Build.BuildId)
 
-  azureSubscription: AzureSubscriptionConnection   # ARM service connection
+  # Azure DevOps ARM service-connection
+  azureSubscription: AzureSubscriptionConnection
 
-  rgName:           ci-cd-rg                       # Resource Group
-  acrName:          nithinkatruacr                 # ACR
-  appServicePrefix: cicd-webapp                    # WebApp name root
-  servicePlanName:  cicd-asp                       # App Service Plan
+  # Azure resource names
+  rgName:           ci-cd-rg
+  acrName:          nithinkatruacr
+  appServicePrefix: cicd-webapp
+  servicePlanName:  cicd-asp
 
+  # Terraform remote-state
   tfStateStorageAccount: tfstateYourSuffix
   tfStateContainer:      tfstate
 
+  # SonarCloud org (remove Sonar steps if you don’t use them)
   sonarOrg: akhilmano1
 
 # ─────────────────────────── Build stage ─────────────────────────
@@ -25,11 +30,11 @@ stages:
   displayName: "CI: Build, Test, Lint, Sonar"
   jobs:
   - job: Build
-    displayName: Build
     pool: { name: LocalSelfHostedPool1, demands: [ "agent.os -equals Windows_NT" ] }
 
     steps:
     - checkout: self
+
     - task: AzureCLI@2
       displayName: "Login to ACR"
       inputs:
@@ -39,14 +44,22 @@ stages:
         inlineScript: az acr login --name $(acrName)
 
     - task: NodeTool@0
+      displayName: "Use Node.js 20"
       inputs: { versionSpec: "20.x" }
 
-    - script: npm ci             --cwd $(Build.SourcesDirectory)
-      displayName: "npm install"
-    - script: npm run lint       --cwd $(Build.SourcesDirectory)
+    # ------------ FIXED npm install step (single line, correct cwd) -------
+    - script: npm ci --loglevel error
+      displayName: "npm ci (install deps)"
+      workingDirectory: $(Build.SourcesDirectory)
+
+    - script: npm run lint
       displayName: "lint"
-    - script: npm test           --cwd $(Build.SourcesDirectory)
+      workingDirectory: $(Build.SourcesDirectory)
+
+    - script: npm test
       displayName: "unit tests"
+      workingDirectory: $(Build.SourcesDirectory)
+    # ---------------------------------------------------------------------
 
     - task: PowerShell@2
       displayName: "Build & push Docker image"
@@ -55,9 +68,9 @@ stages:
         workingDirectory: $(Build.SourcesDirectory)
         script: |
           docker build -t $(acrName).azurecr.io/$(imageName):$(imageTag) .
-          docker push $(acrName).azurecr.io/$(imageName):$(imageTag)
+          docker push  $(acrName).azurecr.io/$(imageName):$(imageTag)
 
-    # (Sonar steps – remove if not needed)
+    # (SonarCloud – optional)
     - task: SonarCloudPrepare@3
       inputs:
         SonarCloud: SonarCloud
@@ -90,7 +103,7 @@ stages:
           - task: TerraformInstaller@0
             inputs: { terraformVersion: 1.7.5 }
 
-          # 2️⃣ Check if the RG already exists
+          # 2️⃣ Check if RG exists
           - task: AzureCLI@2
             name: rgCheck
             displayName: "Check RG existence"
@@ -103,7 +116,7 @@ stages:
                 Write-Host "RG exists? $exists"
                 echo "##vso[task.setvariable variable=RG_EXISTS]$exists"
 
-          # 3️⃣ Terraform init  (creates local state dir)
+          # 3️⃣ terraform init
           - task: TerraformTaskV4@4
             displayName: "Terraform init"
             inputs:
@@ -117,22 +130,22 @@ stages:
               backendAzureRmKey: terraform.tfstate
             env: { ARM_USE_AZUREAD: true }
 
-          # 4️⃣ Import RG *via PowerShell* only if it exists
+          # 4️⃣ Import RG (PowerShell) — only if it exists
           - task: PowerShell@2
-            displayName: "Import RG if already in Azure"
+            displayName: "Import RG if present"
             condition: eq(variables.RG_EXISTS, 'true')
             inputs:
               targetType: inline
               workingDirectory: terraform
               script: |
-                Write-Host "Importing existing RG into Terraform state..."
-                terraform.exe import \
-                  azurerm_resource_group.rg \
+                Write-Host "Importing RG into state..."
+                terraform.exe import `
+                  azurerm_resource_group.rg `
                   /subscriptions/065cdc71-cbc8-4c74-9214-17d87ae5ada1/resourceGroups/$(rgName) `
-                  || Write-Host "Import skipped or already in state."
+                  || Write-Host "RG already imported or import skipped."
             env: { ARM_USE_AZUREAD: true }
 
-          # 5️⃣ Terraform apply
+          # 5️⃣ terraform apply
           - task: TerraformTaskV4@4
             displayName: "Terraform apply"
             inputs:
@@ -151,7 +164,7 @@ stages:
                 -var "acr_name=$(acrName)"
             env: { ARM_USE_AZUREAD: true }
 
-          # 6️⃣ Deploy image to Web App
+          # 6️⃣ Deploy the image to Web App
           - task: AzureWebAppContainer@1
             displayName: "Deploy container to App Service"
             inputs:
