--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,6 @@
 trigger:
   branches: { include: [ main, develop ] }
 
-# ─────────────────────────── Variables ───────────────────────────
 variables:
   imageName:  azdevops-cicd-sample
   imageTag:   $(Build.BuildId)
@@ -12,17 +11,16 @@ variables:
   acrName:          nithinkatruacr
   appServicePrefix: cicd-webapp
   servicePlanName:  cicd-asp
+  location:         eastus                # used by az cli create
 
   tfStateStorageAccount: tfstateYourSuffix
   tfStateContainer:      tfstate
 
   sonarOrg: akhilmano1
 
-# ─────────────────────────── Build stage ─────────────────────────
 stages:
-# ---------------------------------------------------------------- Build --
+# ─────────────────────────── Build ────────────────────────────
 - stage: Build
-  displayName: "CI: Build, Test, Lint, Sonar"
   jobs:
   - job: Build
     pool: { name: LocalSelfHostedPool1, demands: [ "agent.os -equals Windows_NT" ] }
@@ -39,11 +37,10 @@ stages:
         inlineScript: az acr login --name $(acrName)
 
     - task: NodeTool@0
-      displayName: "Use Node.js 20"
       inputs: { versionSpec: "20.x" }
 
     - script: npm ci --loglevel error
-      displayName: "npm ci (install deps)"
+      displayName: "npm ci"
       workingDirectory: $(Build.SourcesDirectory)
 
     - script: npm run lint
@@ -63,6 +60,7 @@ stages:
           docker build -t $(acrName).azurecr.io/$(imageName):$(imageTag) .
           docker push  $(acrName).azurecr.io/$(imageName):$(imageTag)
 
+    # ----- Sonar (optional) -----
     - task: SonarCloudPrepare@3
       inputs:
         SonarCloud: SonarCloud
@@ -74,14 +72,13 @@ stages:
     - task: SonarCloudAnalyze@3
     - task: SonarCloudPublish@3
 
-# ─────────────────────────── Deploy stage ────────────────────────
+# ─────────────────────────── Deploy ───────────────────────────
 - stage: Deploy
-  displayName: "CD: Terraform & WebApp"
   dependsOn: Build
+  displayName: "CD: Push container to existing App Service"
 
   jobs:
   - deployment: Deploy
-    displayName: Deploy
     environment: $(Build.SourceBranchName)
     pool: { name: LocalSelfHostedPool1, demands: [ "agent.os -equals Windows_NT" ] }
 
@@ -91,83 +88,49 @@ stages:
           steps:
           - checkout: self
 
-          # 1️⃣ Install Terraform
-          - task: TerraformInstaller@0
-            inputs: { terraformVersion: 1.7.5 }
-
-          # 2️⃣ Check if RG exists
+          # 1️⃣ Ensure App Service Plan + Web App exist
           - task: AzureCLI@2
-            name: rgCheck
-            displayName: "Check RG existence"
+            displayName: "Create plan & webapp if absent"
             inputs:
               azureSubscription: $(azureSubscription)
               scriptType: ps
               scriptLocation: inlineScript
               inlineScript: |
-                $exists = az group exists --name $(rgName)
-                Write-Host "RG exists? $exists"
-                echo "##vso[task.setvariable variable=RG_EXISTS]$exists"
+                $ErrorActionPreference = 'Stop'
+                $appName = "$(appServicePrefix)-$(Build.SourceBranchName)"
+                $planName = "$(servicePlanName)"
+                $rg        = "$(rgName)"
+                $location  = "$(location)"
 
-          # 3️⃣ terraform init
-          - task: TerraformTaskV4@4
-            displayName: "Terraform init"
-            inputs:
-              provider: azurerm
-              command: init
-              workingDirectory: terraform
-              backendServiceArm: $(azureSubscription)
-              backendAzureRmResourceGroupName: $(rgName)
-              backendAzureRmStorageAccountName: $(tfStateStorageAccount)
-              backendAzureRmContainerName: $(tfStateContainer)
-              backendAzureRmKey: terraform.tfstate
-            env: { ARM_USE_AZUREAD: true }
+                Write-Host "🔎 Checking App Service Plan '$planName'..."
+                $plan = az appservice plan show -g $rg -n $planName -o none 2>$null
+                if (-not $?) {
+                  Write-Host "➕ Creating Plan $planName"
+                  az appservice plan create `
+                       --name $planName `
+                       --resource-group $rg `
+                       --sku B1 `
+                       --is-linux `
+                       --location $location
+                } else { Write-Host "✅ Plan exists." }
 
-          # # 4️⃣ Import RG (PowerShell) — only if it exists
-          # - task: PowerShell@2
-          #   displayName: "Import RG if present"
-          #   condition: eq(variables.RG_EXISTS, 'true')
-          #   inputs:
-          #     targetType: inline
-          #     workingDirectory: terraform
-          #     script: |
-          #       Write-Host "Importing RG into Terraform state..."
-          #       terraform.exe import `
-          #         azurerm_resource_group.rg `
-          #         "/subscriptions/065cdc71-cbc8-4c74-9214-17d87ae5ada1/resourceGroups/$(rgName)"
+                Write-Host "🔎 Checking Web App '$appName'..."
+                $app = az webapp show -g $rg -n $appName -o none 2>$null
+                if (-not $?) {
+                  Write-Host "➕ Creating Web App $appName"
+                  az webapp create `
+                      --resource-group $rg `
+                      --plan $planName `
+                      --name $appName `
+                      --runtime "DOTNETCORE:6.0" `
+                      --deployment-container-image-name "mcr.microsoft.com/oss/nginx/nginx:latest"
+                } else { Write-Host "✅ Web App exists." }
 
-          #       if ($LASTEXITCODE -eq 0) {
-          #         Write-Host "✅  RG imported successfully."
-          #       }
-          #       elseif ($LASTEXITCODE -eq 1) {
-          #         Write-Host "ℹ️  RG is already in state or import skipped."
-          #         exit 0   # treat this as success so pipeline continues
-          #       }
-          #       else {
-          #         Write-Host "❌  Unexpected import error (exit $LASTEXITCODE)"
-          #         exit $LASTEXITCODE
-          #       }
-          #   env: { ARM_USE_AZUREAD: true }
+          # (Terraform steps remain commented until you re-enable them)
+          # - task: TerraformInstaller@0
+          # ... etc ...
 
-          # # 5️⃣ terraform apply
-          # - task: TerraformTaskV4@4
-          #   displayName: "Terraform apply"
-          #   inputs:
-          #     provider: azurerm
-          #     command: apply
-          #     workingDirectory: terraform
-          #     environmentServiceNameAzureRM: $(azureSubscription)
-          #     commandOptions: >-
-          #       -input=false
-          #       -auto-approve
-          #       -var "resource_group_name=$(rgName)"
-          #       -var "service_plan_name=$(servicePlanName)"
-          #       -var "web_app_name=$(appServicePrefix)-$(Build.SourceBranchName)"
-          #       -var "image_name=$(imageName)"
-          #       -var "image_tag=$(imageTag)"
-          #       -var "acr_name=$(acrName)"
-          #   env: { ARM_USE_AZUREAD: true }
-
-          # 6️⃣ Deploy the image to Web App
+          # 2️⃣ Deploy the container image
           - task: AzureWebAppContainer@1
             displayName: "Deploy container to App Service"
             inputs:
