--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,52 +89,51 @@ stages:
           - checkout: self
 
                           # 1️⃣ Ensure App Service Plan + Web App exist
-          - task: AzureCLI@2
-            displayName: "Create plan & webapp if absent"
-            inputs:
-              azureSubscription: $(azureSubscription)
-              scriptType: ps
-              scriptLocation: inlineScript
-              inlineScript: |
-                $rg        = "$(rgName)"
-                $planName  = "$(servicePlanName)"
-                $appName   = "$(appServicePrefix)-$(Build.SourceBranchName)"
-                $location  = "$(location)"    # eastus
+         - task: AzureCLI@2
+  displayName: "Create plan & webapp if absent"
+  inputs:
+    azureSubscription: $(azureSubscription)
+    scriptType: ps
+    scriptLocation: inlineScript
+    inlineScript: |
+      $ErrorActionPreference = 'Continue'
+      $rg        = "$(rgName)"
+      $planName  = "$(servicePlanName)"
+      $appName   = "$(appServicePrefix)-$(Build.SourceBranchName)"
+      $location  = "$(location)"
 
-                Write-Host "🔎 Checking App Service Plan '$planName'..."
-                $plan = az appservice plan show -g $rg -n $planName --query name -o tsv 2>$null
-                if (-not $plan) {
-                  Write-Host "➕ Creating App Service Plan '$planName'"
-                  az appservice plan create `
-                       --name $planName `
-                       --resource-group $rg `
-                       --sku B1 `
-                       --is-linux `
-                       --location $location
-                  # wait until ARM has fully provisioned the plan
-                  Write-Host "⏳ Waiting for plan to become available..."
-                  do {
-                    Start-Sleep -Seconds 5
-                    $plan = az appservice plan show -g $rg -n $planName --query name -o tsv 2>$null
-                  } until ($plan)
-                } else {
-                  Write-Host "✅ Plan exists."
-                }
+      Write-Host "🔎 Checking App Service Plan '$planName'..."
+      az appservice plan show -g $rg -n $planName -o none 2>$null
+      if ($LASTEXITCODE -ne 0) {
+        Write-Host "➕ Creating App Service Plan '$planName'"
+        az appservice plan create `
+          --name $planName `
+          --resource-group $rg `
+          --sku B1 `
+          --is-linux `
+          --location $location
 
-                Write-Host "🔎 Checking Web App '$appName'..."
-                $app = az webapp show -g $rg -n $appName --query name -o tsv 2>$null
-                if (-not $app) {
-                  Write-Host "➕ Creating Web App '$appName'"
-                  az webapp create `
-                       --resource-group $rg `
-                       --plan $planName `
-                       --name $appName `
-                       --deployment-container-image-name "mcr.microsoft.com/oss/nginx/nginx:latest"
-                  Write-Host "✅ Web App created."
-                } else {
-                  Write-Host "✅ Web App exists."
-                }
+        Write-Host "⏳ Waiting for App Service Plan '$planName' to be provisioned..."
+        do {
+          Start-Sleep -Seconds 5
+          az appservice plan show -g $rg -n $planName -o none 2>$null
+        } while ($LASTEXITCODE -ne 0)
+        Write-Host "✅ Plan provisioned successfully."
+      }
+      else { Write-Host "✅ Plan already exists." }
 
+      Write-Host "🔎 Checking Web App '$appName'..."
+      az webapp show -g $rg -n $appName -o none 2>$null
+      if ($LASTEXITCODE -ne 0) {
+        Write-Host "➕ Creating Web App '$appName'"
+        az webapp create `
+          --resource-group $rg `
+          --plan $planName `
+          --name $appName `
+          --deployment-container-image-name "mcr.microsoft.com/oss/nginx/nginx:latest"
+        Write-Host "✅ Web App created."
+      }
+      else { Write-Host "✅ Web App already exists." }
 
           # 2️⃣ Deploy the container image
           - task: AzureWebAppContainer@1
