--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,29 +1,37 @@
 trigger:
-  branches: { include: [ main, develop ] }
+  branches:
+    include:
+      - main
+      - develop
 
 variables:
-  imageName:  azdevops-cicd-sample
-  imageTag:   $(Build.BuildId)
+  imageName:               azdevops-cicd-sample
+  imageTag:                $(Build.BuildId)
 
-  azureSubscription: AzureSubscriptionConnection
+  azureSubscription:       AzureSubscriptionConnection
 
-  rgName:           ci-cd-rg
-  acrName:          nithinkatruacr
-  appServicePrefix: cicd-webapp
-  servicePlanName:  cicd-asp
-  location:         eastus                # used by az cli create
+  rgName:                  ci-cd-rg
+  acrName:                 nithinkatruacr
+  appServicePrefix:        cicd-webapp
+  servicePlanName:         cicd-asp
+  location:                eastus
 
-  tfStateStorageAccount: tfstateYourSuffix
-  tfStateContainer:      tfstate
+  tfStateStorageAccount:   tfstateYourSuffix
+  tfStateContainer:        tfstate
 
-  sonarOrg: akhilmano1
+  sonarOrg:                akhilmano1
 
 stages:
 # ─────────────────────────── Build ────────────────────────────
 - stage: Build
+  displayName: "CI: Build, Test, Lint, Sonar"
   jobs:
   - job: Build
-    pool: { name: LocalSelfHostedPool1, demands: [ "agent.os -equals Windows_NT" ] }
+    displayName: Build
+    pool:
+      name: LocalSelfHostedPool1
+      demands:
+        - agent.os -equals Windows_NT
 
     steps:
     - checkout: self
@@ -34,10 +42,13 @@ stages:
         azureSubscription: $(azureSubscription)
         scriptType: ps
         scriptLocation: inlineScript
-        inlineScript: az acr login --name $(acrName)
+        inlineScript: |
+          az acr login --name $(acrName)
 
     - task: NodeTool@0
-      inputs: { versionSpec: "20.x" }
+      displayName: "Use Node.js 20"
+      inputs:
+        versionSpec: "20.x"
 
     - script: npm ci --loglevel error
       displayName: "npm ci"
@@ -58,10 +69,10 @@ stages:
         workingDirectory: $(Build.SourcesDirectory)
         script: |
           docker build -t $(acrName).azurecr.io/$(imageName):$(imageTag) .
-          docker push  $(acrName).azurecr.io/$(imageName):$(imageTag)
+          docker push $(acrName).azurecr.io/$(imageName):$(imageTag)
 
-    # ----- Sonar (optional) -----
     - task: SonarCloudPrepare@3
+      displayName: "Sonar – prepare"
       inputs:
         SonarCloud: SonarCloud
         organization: $(sonarOrg)
@@ -69,18 +80,26 @@ stages:
         configMode: manual
         cliProjectKey: akhilmano1_azure-devops-cicd-sample-Public
         cliProjectName: CI-CD Sample
-    - task: SonarCloudAnalyze@3
-    - task: SonarCloudPublish@3
 
-# ─────────────────────────── Deploy ───────────────────────────
+    - task: SonarCloudAnalyze@3
+      displayName: "Sonar – analyze"
+
+    - task: SonarCloudPublish@3
+      displayName: "Sonar – publish"
+
+# ─────────────────────────── Deploy ────────────────────────────
 - stage: Deploy
-  dependsOn: Build
   displayName: "CD: Push container to existing App Service"
+  dependsOn: Build
 
   jobs:
   - deployment: Deploy
+    displayName: Deploy
     environment: $(Build.SourceBranchName)
-    pool: { name: LocalSelfHostedPool1, demands: [ "agent.os -equals Windows_NT" ] }
+    pool:
+      name: LocalSelfHostedPool1
+      demands:
+        - agent.os -equals Windows_NT
 
     strategy:
       runOnce:
@@ -88,52 +107,56 @@ stages:
           steps:
           - checkout: self
 
-                          # 1️⃣ Ensure App Service Plan + Web App exist
-         - task: AzureCLI@2
-  displayName: "Create plan & webapp if absent"
-  inputs:
-    azureSubscription: $(azureSubscription)
-    scriptType: ps
-    scriptLocation: inlineScript
-    inlineScript: |
-      $ErrorActionPreference = 'Continue'
-      $rg        = "$(rgName)"
-      $planName  = "$(servicePlanName)"
-      $appName   = "$(appServicePrefix)-$(Build.SourceBranchName)"
-      $location  = "$(location)"
+          # 1️⃣ Ensure App Service Plan + Web App exist
+          - task: AzureCLI@2
+            displayName: "Create plan & webapp if absent"
+            inputs:
+              azureSubscription: $(azureSubscription)
+              scriptType: ps
+              scriptLocation: inlineScript
+              inlineScript: |
+                $ErrorActionPreference = 'Continue'
+                $rg        = "$(rgName)"
+                $planName  = "$(servicePlanName)"
+                $appName   = "$(appServicePrefix)-$(Build.SourceBranchName)"
+                $location  = "$(location)"
 
-      Write-Host "🔎 Checking App Service Plan '$planName'..."
-      az appservice plan show -g $rg -n $planName -o none 2>$null
-      if ($LASTEXITCODE -ne 0) {
-        Write-Host "➕ Creating App Service Plan '$planName'"
-        az appservice plan create `
-          --name $planName `
-          --resource-group $rg `
-          --sku B1 `
-          --is-linux `
-          --location $location
+                Write-Host "🔎 Checking App Service Plan '$planName'..."
+                az appservice plan show -g $rg -n $planName -o none 2>$null
+                if ($LASTEXITCODE -ne 0) {
+                  Write-Host "➕ Creating App Service Plan '$planName'"
+                  az appservice plan create `
+                    --name $planName `
+                    --resource-group $rg `
+                    --sku B1 `
+                    --is-linux `
+                    --location $location
 
-        Write-Host "⏳ Waiting for App Service Plan '$planName' to be provisioned..."
-        do {
-          Start-Sleep -Seconds 5
-          az appservice plan show -g $rg -n $planName -o none 2>$null
-        } while ($LASTEXITCODE -ne 0)
-        Write-Host "✅ Plan provisioned successfully."
-      }
-      else { Write-Host "✅ Plan already exists." }
+                  Write-Host "⏳ Waiting for plan to become available..."
+                  do {
+                    Start-Sleep -Seconds 5
+                    az appservice plan show -g $rg -n $planName -o none 2>$null
+                  } while ($LASTEXITCODE -ne 0)
+                  Write-Host "✅ Plan provisioned successfully."
+                }
+                else {
+                  Write-Host "✅ Plan already exists."
+                }
 
-      Write-Host "🔎 Checking Web App '$appName'..."
-      az webapp show -g $rg -n $appName -o none 2>$null
-      if ($LASTEXITCODE -ne 0) {
-        Write-Host "➕ Creating Web App '$appName'"
-        az webapp create `
-          --resource-group $rg `
-          --plan $planName `
-          --name $appName `
-          --deployment-container-image-name "mcr.microsoft.com/oss/nginx/nginx:latest"
-        Write-Host "✅ Web App created."
-      }
-      else { Write-Host "✅ Web App already exists." }
+                Write-Host "🔎 Checking Web App '$appName'..."
+                az webapp show -g $rg -n $appName -o none 2>$null
+                if ($LASTEXITCODE -ne 0) {
+                  Write-Host "➕ Creating Web App '$appName'"
+                  az webapp create `
+                    --resource-group $rg `
+                    --plan $planName `
+                    --name $appName `
+                    --deployment-container-image-name "mcr.microsoft.com/oss/nginx/nginx:latest"
+                  Write-Host "✅ Web App created."
+                }
+                else {
+                  Write-Host "✅ Web App already exists."
+                }
 
           # 2️⃣ Deploy the container image
           - task: AzureWebAppContainer@1
@@ -141,5 +164,5 @@ stages:
             inputs:
               azureSubscription: $(azureSubscription)
               resourceGroupName: $(rgName)
-              appName: $(appServicePrefix)-$(Build.SourceBranchName)
-              imageName: $(acrName).azurecr.io/$(imageName):$(imageTag)
+              appName: "$(appServicePrefix)-$(Build.SourceBranchName)"
+              imageName: "$(acrName).azurecr.io/$(imageName):$(imageTag)"
